--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section id="about" class="about">
         <img src="12410408 0098459552 Moh Ahlan Firmansyah.jpg" alt="hero">
-        <h1>Sampurasun, kuring Ahlan</h1>
+        <h1>Welcome to Ahlan</h1>
         <p class="nama">Saya Adalah Siswa SMK WIKRAMA BOGOR Angkatan 29</p>
     </section>
 
